# zhenghe-mcp

./: .gitignore  README.md  __init__.py  config.py  main.py  pyproject.toml  requirements.txt  server.py  standalone_server.py  vercel.json
.github/workflows/: deploy.yml
api/: index.py
auth/: api_key.py
tools/: __init__.py  account_tools.py  agent_tools.py  mint_burn_tools.py  transfer_tools.py
